<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hw1_assignment</name>
  <version>1.0.0</version>
  <description>HW1 assignment for CS453 robotics 1 at University of Idaho Fall2022 </description>
  <maintainer email="haydencarroll77@gmail.com">haydenccarroll</maintainer>
  <license>No license idk</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>threading</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
